--- a/Utils/頁面通用CSS.html
+++ b/Utils/頁面通用CSS.html
@@ -1,7 +1,7 @@
 <!-- 全頁面通用 CSS -->
 <style>
-    .module {
-        margin-bottom: 0 !important;
+    body {
+        background: white !important;
     }
 
     .float-on-bg {
