--- a/Desktop/關於我們/成立願景文章.html
+++ b/Desktop/關於我們/成立願景文章.html
@@ -1,4 +1,4 @@
-<section class="d-none d-lg-block">
+<section id="Section_Establishment_Vision" class="d-none d-lg-block">
     <div class="float-on-bg establishment-vision-container">
         <p class="establishment-vision-title">
             成立願景
