--- a/Desktop/關於我們/組織架構.html
+++ b/Desktop/關於我們/組織架構.html
@@ -1,4 +1,4 @@
-<section class="d-none d-lg-block">
+<section id="Section_Organization" class="d-none d-lg-block">
     <p class="float-on-bg bg-white organization-title w-100 text-center m-0">組織架構</p>
 
     <div class="float-on-bg bg-white organization-container">
