--- a/Desktop/實踐成果/年度專刊.html
+++ b/Desktop/實踐成果/年度專刊.html
@@ -1,4 +1,4 @@
-<section class="d-none d-lg-block">
+<section id="Section_Annual_Book" class="d-none d-lg-block">
     <div class="annual-book-container">
         <h1 class="annual-book-title">年 度 專 刊</h1>
 
