--- a/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊主題.html
+++ b/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊主題.html
@@ -1,14 +1,18 @@
-<div class="collaborative-partner-background">
-    <div class="collaborative-partner-background-content-container w-100 text-center">
-        <h1 class="collaborative-partner-background-content-sub-title">109-110學年度</h1>
-        <hr class="collaborative-partner-background-content-hr">
-        <h1 class="collaborative-partner-background-content-title">木創文化攪動深根計畫</h1>
-        <span class="collaborative-partner-background-content-button text-center">計畫網站</span>
+<section class="d-none d-lg-block">
+    <div class="collaborative-partner-background">
+        <div class="collaborative-partner-background-content-container w-100 text-center">
+            <h1 class="collaborative-partner-background-content-sub-title">109-110學年度</h1>
+            <hr class="collaborative-partner-background-content-hr">
+            <h1 class="collaborative-partner-background-content-title  animate__animated animate__jello">木創文化攪動深根計畫</h1>
+            <span class="collaborative-partner-background-content-button text-center">計畫網站</span>
+        </div>
     </div>
-</div>
+</section>
 <style type="text/css">
     .collaborative-partner-background {
         background: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/438398622.png);
+        background-size: cover;
+        background-repeat: no-repeat;
         width: 100vw;
         margin-top: 120px;
         height: 636px;
