更新 實踐成果

--- a/Desktop/實踐成果/場域地圖.html
+++ b/Desktop/實踐成果/場域地圖.html
@@ -1,45 +1,58 @@
-<section id="Section_Activity_Region" class="d-none d-lg-block">
+<section class="d-none d-lg-block" id="Section_Activity_Region">
     <div class="activity-region-container">
-        <h1 class="activity-region-title">場 域 地 圖</h1>
+        <h1 class="activity-region-title animate__animated animate__jello">場 域 地 圖</h1>
 
-        <h1 class="activity-region-sub-title">TAIWAN</h1>
-        <img class="image-taiwan" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/785184148.png" />
-        <img class="image-wave" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/146602374.png" />
-        <img class="image-people" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/889880339.png" />
+        <h1 class="activity-region-sub-title animate__animated animate__jello">TAIWAN</h1>
+        <img class="image-taiwan" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/785184148.png" /> <img
+            class="image-wave" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/146602374.png" /> <img
+            class="image-people" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/889880339.png"
+            data-aos="zoom-in-down" data-aos-duration="1000" />
+        <img class="icon-location" id="icon-location-A"
+            src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/120099398.png" data-aos="zoom-in-up"
+            data-aos-duration="1000" />
+        <img class="icon-location" id="icon-location-B"
+            src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/120099398.png" data-aos="zoom-in-up"
+            data-aos-duration="1000" />
+        <img class="icon-location" id="icon-location-C"
+            src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/120099398.png" data-aos="zoom-in-up"
+            data-aos-duration="1000" />
+        <div class="activity-region-content-container" id="content-A"><span
+                class="activity-region-content-title-border"></span>
 
-        <img id="icon-location-A" class="icon-location"
-            src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/120099398.png" />
-        <img id="icon-location-B" class="icon-location"
-            src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/120099398.png" />
-        <img id="icon-location-C" class="icon-location"
-            src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/120099398.png" />
-
-        <div id="content-A" class="activity-region-content-container">
-            <span class="activity-region-content-title-border"></span>
             <p class="activity-region-content-title">台北</p>
+
             <p class="activity-region-content">北科 社會責任辦公室</p>
+
             <p class="activity-region-content-date">Since 2018</p>
         </div>
-        <div id="content-B" class="activity-region-content-container">
-            <span class="activity-region-content-title-border"></span>
+
+        <div class="activity-region-content-container" id="content-B"><span
+                class="activity-region-content-title-border"></span>
+
             <p class="activity-region-content-title">新竹</p>
-            <p class="activity-region-content">原住民安居構築<br>與綠色樂業推動計畫</p>
+
+            <p class="activity-region-content">原住民安居構築<br />
+                與綠色樂業推動計畫</p>
+
             <p class="activity-region-content-date">2019.02-2019.10</p>
         </div>
-        <div id="content-C" class="activity-region-content-container">
-            <span class="activity-region-content-title-border"></span>
+
+        <div class="activity-region-content-container" id="content-C"><span
+                class="activity-region-content-title-border"></span>
+
             <p class="activity-region-content-title">屏東</p>
+
             <p class="activity-region-content">在地「富育」計畫 - 牡丹鄉</p>
+
             <p class="activity-region-content-date">2019.02-2019.10</p>
         </div>
     </div>
 </section>
-
 <style type="text/css">
     .activity-region-container {
         margin-top: 105px;
         position: relative;
-        width: 1920px;
+        width: 100vw;
         height: 987px;
         background-image: linear-gradient(to bottom, #ccf1fd, var(--white) 71%);
     }
@@ -51,6 +64,7 @@
         color: #4998b2;
         font-size: 45px;
         line-height: 1.33;
+        z-index: 10;
     }
 
     .activity-region-sub-title {
@@ -59,6 +73,7 @@
         left: 245px;
         font-size: 35px;
         color: #999999;
+        z-index: 10;
     }
 
     .activity-region-content-container {
