--- a/Desktop/實踐成果/年度專刊.html
+++ b/Desktop/實踐成果/年度專刊.html
@@ -1,8 +1,8 @@
 <section id="Section_Annual_Book" class="d-none d-lg-block">
     <div class="annual-book-container">
-        <h1 class="annual-book-title">年 度 專 刊</h1>
+        <h1 class="annual-book-title animate__animated animate__jello">年 度 專 刊</h1>
 
-        <div class="books-wrapper row">
+        <div class="books-wrapper row" data-aos="flip-left">
             <div class="col pr-28">
                 <div class="d-flex flex-column">
                     <div class="p-2">
@@ -43,6 +43,8 @@
 <style type="text/css">
     .annual-book-container {
         background: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/931360701.png);
+        background-size: cover;
+        background-repeat: no-repeat;
         width: 100vw;
         margin-top: 120px;
         height: 1046px;
