--- a/Utils/外部CDN模組.html
+++ b/Utils/外部CDN模組.html
@@ -13,5 +13,15 @@
 <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     rel="stylesheet" />
 
+<!-- Animate.css  -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+<!-- csshake -->
+<link rel="stylesheet" type="text/css" href="https://csshake.surge.sh/csshake.min.css">
+
 <!-- sweetalert2  -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+
+<!-- AOS  -->
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
