更新 關於我們

--- a/Desktop/關於我們/組織成員.html
+++ b/Desktop/關於我們/組織成員.html
@@ -1,9 +1,9 @@
-<section id="Section_Organization_Member" class="d-none d-lg-block">
+<section class="d-none d-lg-block" id="Section_Organization_Member">
     <div class="float-on-bg bg-white organization-member-container">
         <p class="float-on-bg bg-white organization-member-title w-100 text-center">組織成員</p>
-
         <!-- 01 -->
-        <div class="d-flex align-items-center organization-member-list">
+
+        <div class="d-flex align-items-center organization-member-list" data-aos="fade-right">
             <div><img class="organization-member-image"
                     src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/581610774.png" /></div>
 
@@ -18,9 +18,9 @@
                 </div>
             </div>
         </div>
-
         <!-- 02 -->
-        <div class="d-flex align-items-center organization-member-list">
+
+        <div class="d-flex align-items-center organization-member-list" data-aos="fade-left">
             <div class="d-flex flex-column justify-content-center">
                 <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
                     <p class="organization-member-name">楊重光 教授(副校長)</p>
@@ -36,9 +36,9 @@
                     src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/417200873.png" /></div>
         </div>
     </div>
-
     <!-- 03 -->
-    <div class="d-flex align-items-center organization-member-list">
+
+    <div class="d-flex align-items-center organization-member-list" data-aos="fade-right">
         <div><img class="organization-member-image"
                 src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/567669650.png" /></div>
 
@@ -53,9 +53,9 @@
             </div>
         </div>
     </div>
-
     <!-- 04 -->
-    <div class="d-flex align-items-center organization-member-list">
+
+    <div class="d-flex align-items-center organization-member-list" data-aos="fade-left">
         <div class="d-flex flex-column justify-content-center">
             <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
                 <p class="organization-member-name">陳建文 教授(通識中心主任)</p>
@@ -70,9 +70,9 @@
         <div><img class="organization-member-image"
                 src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/729337629.png" /></div>
     </div>
-
     <!-- 05 -->
-    <div class="d-flex align-items-center organization-member-list">
+
+    <div class="d-flex align-items-center organization-member-list" data-aos="fade-right">
         <div><img class="organization-member-image"
                 src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/404100551.png" /></div>
 
@@ -87,9 +87,9 @@
             </div>
         </div>
     </div>
-
     <!-- 06 -->
-    <div class="d-flex align-items-center organization-member-list">
+
+    <div class="d-flex align-items-center organization-member-list" data-aos="fade-left">
         <div class="d-flex flex-column justify-content-center">
             <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
                 <p class="organization-member-name">張佳琳 小姐</p>
@@ -105,9 +105,9 @@
         <div><img class="organization-member-image"
                 src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/563741094.png" /></div>
     </div>
-
     <!-- 07 -->
-    <div class="d-flex align-items-center organization-member-list">
+
+    <div class="d-flex align-items-center organization-member-list" data-aos="fade-right">
         <div><img class="organization-member-image"
                 src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/401269290.png" /></div>
 
