--- a/Desktop/關於我們/LOGO區.html
+++ b/Desktop/關於我們/LOGO區.html
@@ -1,7 +1,8 @@
 <section id="Section_Logo" class="d-none d-lg-block">
     <div class="float-on-bg" id="logo-container">
         <div class="logo-wrapper">
-            <img class="logo-icon" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/734576452.png" />
+            <img class="logo-icon shake-slow"" src=" https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/734576452.png"
+                data-aos="zoom-in-up" />
         </div>
         <!-- Logo 含意說明 -->
         <img class="logo-description d-none" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/639955965.png" />
