更新 提示說明

--- a/Desktop/檔案下載/提示說明.html
+++ b/Desktop/檔案下載/提示說明.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column container justify-content-center bg-light my-3 p-5" style="min-height: 80vh;">
-    <img src="https://www.flaticon.com/svg/static/icons/svg/2170/2170153.svg"
-        class="align-self-center shake-slow"" style=" width: 150px;">
-    <h1 class="align-self-center font-weight-bold mt-3">
+    <img src="https://www.flaticon.com/svg/static/icons/svg/2170/2170153.svg" class="align-self-center shake-slow"
+        style="width: 150px;">
+    <h1 class="align-self-center font-weight-bold mt-5">
         僅限校內人員可以瀏覽, 如果您尚未登入, 請先
         <a href="#" onclick="showPopDiv($('#_pop_login.mpopdiv'),$('#_pop_login.mpopdiv .mbox'));"> 登入! </a>
     </h1>
