--- a/Desktop/合作團隊/木創文化攪動深根計畫/亮點成果.html
+++ b/Desktop/合作團隊/木創文化攪動深根計畫/亮點成果.html
@@ -1,61 +1,59 @@
-<section class="d-none d-lg-block">
-    <div class="collaborative-partner-highlight-container">
-        <h1 class="w-100 text-center collaborative-partner-highlight-title">亮點成果</h1>
+<div class="collaborative-partner-highlight-container">
+    <h1 class="w-100 text-center collaborative-partner-highlight-title">亮點成果</h1>
 
-        <div class="collaborative-partner-highlight-contents-container w-100">
-            <div class="d-flex flex-column bd-highlight pl-3 mb-3">
-                <div class="collaborative-partner-highlight-content-container row" data-aos="flip-left"
-                    data-aos-duration="1000">
-                    <div class="col-12 col-lg-5 d-flex justify-content-center collaborative-partner-highlight-content-image"
-                        style="background: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/701482618.png);">
-                    </div>
-
-                    <div class="col-12 col-lg-7 mt-5 mt-lg-0">
-                        <div class="d-flex flex-column bd-highlight pl-3 mb-3">
-                            <div class="collaborative-partner-highlight-content-title">
-                                <p>原住民安居構築與綠色樂業推動計畫</p>
-                            </div>
-
-                            <div class="collaborative-partner-highlight-content">
-                                <p class="ellipsis-line-5">在新竹縣尖石鄉海拔 1200 公尺至1600公尺森林山區,後山的農 村部落裡,維持著非常
-                                    良好景觀及自然資源族人多為泰雅族群從事 農耕生活,致力於推廣內涵泰雅智慧的自然友善農業。但因為過去 社群組織停頓、山地理、交通運輸及資源不足等限制,產業的維持
-                                    及生活文化受到各種現實考驗</p>
-                            </div>
-
-                            <div
-                                class="collaborative-partner-highlight-content-button d-flex justify-content-center align-items-center">
-                                <span>課程介紹</span></div>
-                        </div>
-                    </div>
+    <div class="collaborative-partner-highlight-contents-container w-100">
+        <div class="d-flex flex-column bd-highlight pl-3 mb-3">
+            <div class="collaborative-partner-highlight-content-container row" data-aos="flip-left"
+                data-aos-duration="1000">
+                <div class="col-12 col-lg-5 d-flex justify-content-center collaborative-partner-highlight-content-image"
+                    style="background: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/701482618.png);">
                 </div>
 
-                <div class="collaborative-partner-highlight-content-container row" data-aos="flip-left"
-                    data-aos-duration="1000">
-                    <div class="col-12 col-lg-5 d-flex justify-content-center collaborative-partner-highlight-content-image"
-                        style="background: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/337140513.png);">
-                    </div>
-                    <div class="col-12 col-lg-7 mt-5 mt-lg-0">
-                        <div class="d-flex flex-column bd-highlight pl-3 mb-3">
-                            <div class="collaborative-partner-highlight-content-title">
-                                <p>原住民安居構築與綠色樂業推動計畫</p>
-                            </div>
-
-                            <div class="collaborative-partner-highlight-content">
-                                <p class="ellipsis-line-5">在新竹縣尖石鄉海拔 1200 公尺至1600公尺森林山區,後山的農 村部落裡,維持著非常
-                                    良好景觀及自然資源族人多為泰雅族群從事 農耕生活,致力於推廣內涵泰雅智慧的自然友善農業。但因為過去 社群組織停頓、山地理、交通運輸及資源不足等限制,產業的維持
-                                    及生活文化受到各種現實考驗</p>
-                            </div>
-
-                            <div
-                                class="collaborative-partner-highlight-content-button d-flex justify-content-center align-items-center">
-                                <span>課程介紹</span></div>
+                <div class="col-12 col-lg-7 mt-5 mt-lg-0">
+                    <div class="d-flex flex-column bd-highlight pl-3 mb-3">
+                        <div class="collaborative-partner-highlight-content-title">
+                            <p>原住民安居構築與綠色樂業推動計畫</p>
                         </div>
+
+                        <div class="collaborative-partner-highlight-content">
+                            <p class="ellipsis-line-5">在新竹縣尖石鄉海拔 1200 公尺至1600公尺森林山區,後山的農 村部落裡,維持著非常
+                                良好景觀及自然資源族人多為泰雅族群從事 農耕生活,致力於推廣內涵泰雅智慧的自然友善農業。但因為過去 社群組織停頓、山地理、交通運輸及資源不足等限制,產業的維持
+                                及生活文化受到各種現實考驗</p>
+                        </div>
+
+                        <div
+                            class="collaborative-partner-highlight-content-button d-flex justify-content-center align-items-center">
+                            <span>課程介紹</span></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="collaborative-partner-highlight-content-container row" data-aos="flip-left"
+                data-aos-duration="1000">
+                <div class="col-12 col-lg-5 d-flex justify-content-center collaborative-partner-highlight-content-image"
+                    style="background: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/337140513.png);">
+                </div>
+                <div class="col-12 col-lg-7 mt-5 mt-lg-0">
+                    <div class="d-flex flex-column bd-highlight pl-3 mb-3">
+                        <div class="collaborative-partner-highlight-content-title">
+                            <p>原住民安居構築與綠色樂業推動計畫</p>
+                        </div>
+
+                        <div class="collaborative-partner-highlight-content">
+                            <p class="ellipsis-line-5">在新竹縣尖石鄉海拔 1200 公尺至1600公尺森林山區,後山的農 村部落裡,維持著非常
+                                良好景觀及自然資源族人多為泰雅族群從事 農耕生活,致力於推廣內涵泰雅智慧的自然友善農業。但因為過去 社群組織停頓、山地理、交通運輸及資源不足等限制,產業的維持
+                                及生活文化受到各種現實考驗</p>
+                        </div>
+
+                        <div
+                            class="collaborative-partner-highlight-content-button d-flex justify-content-center align-items-center">
+                            <span>課程介紹</span></div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</section>
+</div>
 <style type="text/css">
     .collaborative-partner-highlight-container {
         position: relative;
@@ -74,7 +72,25 @@
     }
 
     .collaborative-partner-highlight-content-container {
-        padding: 55px 250px;
+        padding: 55px 50px;
+    }
+
+    @media (min-width: 767px) {
+        .collaborative-partner-highlight-content-container {
+            padding: 55px 100px;
+        }
+    }
+
+    @media (min-width: 1023px) {
+        .collaborative-partner-highlight-content-container {
+            padding: 55px 150px;
+        }
+    }
+
+    @media (min-width: 1366px) {
+        .collaborative-partner-highlight-content-container {
+            padding: 55px 250px;
+        }
     }
 
     .collaborative-partner-highlight-content-title {
@@ -110,8 +126,15 @@
     }
 
     .collaborative-partner-highlight-content-image {
+        min-height: 250px;
         background-repeat: no-repeat !important;
-        background-size: cover !important;
+        background-size: contain !important;
+    }
+
+    @media (min-width: 767px) {
+        .collaborative-partner-highlight-content-image {
+            min-height: 500px;
+        }
     }
 </style>
 </div>
