--- a/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊成員.html
+++ b/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊成員.html
@@ -1,60 +1,58 @@
-<section class="d-none d-lg-block">
-    <div class="collaborative-partner-member-container">
-        <h1 class="w-100 text-center collaborative-partner-member-title">團 隊 成 員</h1>
-        <div class="collaborative-partner-member-content-container w-100">
-            <div class="row text-center justify-content-start">
-                <div class="collaborative-partner-member-content col-6 col-xl-3">
-                    <div class="d-flex flex-column align-items-center" data-aos="flip-left">
-                        <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/144835366.png" alt="成員照片"
-                            width="174" height="174">
-                        <p class="collaborative-partner-member-content-name">吳舜堂 教授</p>
-                        <p class="collaborative-partner-member-content-department">單位：通識教務中心</p>
-                    </div>
+<div class="collaborative-partner-member-container">
+    <h1 class="w-100 text-center collaborative-partner-member-title">團 隊 成 員</h1>
+    <div class="collaborative-partner-member-content-container w-100">
+        <div class="row text-center justify-content-start">
+            <div class="collaborative-partner-member-content col-md-6 col-xl-3">
+                <div class="d-flex flex-column align-items-center" data-aos="flip-left">
+                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/144835366.png" alt="成員照片" width="174"
+                        height="174">
+                    <p class="collaborative-partner-member-content-name">吳舜堂 教授</p>
+                    <p class="collaborative-partner-member-content-department">單位：通識教務中心</p>
                 </div>
-                <div class="collaborative-partner-member-content col-6 col-xl-3">
-                    <div class="d-flex flex-column align-items-center" data-aos="flip-left">
-                        <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/250107907.png" alt="成員照片"
-                            width="174" height="174">
-                        <p class="collaborative-partner-member-content-name">張若菡 副教授</p>
-                        <p class="collaborative-partner-member-content-department">單位：工業設計系</p>
-                    </div>
+            </div>
+            <div class="collaborative-partner-member-content col-md-6 col-xl-3">
+                <div class="d-flex flex-column align-items-center" data-aos="flip-left">
+                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/250107907.png" alt="成員照片" width="174"
+                        height="174">
+                    <p class="collaborative-partner-member-content-name">張若菡 副教授</p>
+                    <p class="collaborative-partner-member-content-department">單位：工業設計系</p>
                 </div>
-                <div class="collaborative-partner-member-content col-6 col-xl-3">
-                    <div class="d-flex flex-column align-items-center" data-aos="flip-left">
-                        <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/144835366.png" alt="成員照片"
-                            width="174" height="174">
-                        <p class="collaborative-partner-member-content-name">林承謙 副教授</p>
-                        <p class="collaborative-partner-member-content-department">單位：商業設計系</p>
-                    </div>
+            </div>
+            <div class="collaborative-partner-member-content col-md-6 col-xl-3">
+                <div class="d-flex flex-column align-items-center" data-aos="flip-left">
+                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/144835366.png" alt="成員照片" width="174"
+                        height="174">
+                    <p class="collaborative-partner-member-content-name">林承謙 副教授</p>
+                    <p class="collaborative-partner-member-content-department">單位：商業設計系</p>
                 </div>
-                <div class="collaborative-partner-member-content col-6 col-xl-3">
-                    <div class="d-flex flex-column align-items-center" data-aos="flip-left">
-                        <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/144835366.png" alt="成員照片"
-                            width="174" height="174">
-                        <p class="collaborative-partner-member-content-name">范政揆 副教授</p>
-                        <p class="collaborative-partner-member-content-department">單位：工業設計系</p>
-                    </div>
+            </div>
+            <div class="collaborative-partner-member-content col-md-6 col-xl-3">
+                <div class="d-flex flex-column align-items-center" data-aos="flip-left">
+                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/144835366.png" alt="成員照片" width="174"
+                        height="174">
+                    <p class="collaborative-partner-member-content-name">范政揆 副教授</p>
+                    <p class="collaborative-partner-member-content-department">單位：工業設計系</p>
                 </div>
-                <div class="collaborative-partner-member-content col-6 col-xl-3">
-                    <div class="d-flex flex-column align-items-center" data-aos="flip-left">
-                        <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/144835366.png" alt="成員照片"
-                            width="174" height="174">
-                        <p class="collaborative-partner-member-content-name">陳殿禮 教授</p>
-                        <p class="collaborative-partner-member-content-department">單位：工業設計系</p>
-                    </div>
+            </div>
+            <div class="collaborative-partner-member-content col-md-6 col-xl-3">
+                <div class="d-flex flex-column align-items-center" data-aos="flip-left">
+                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/144835366.png" alt="成員照片" width="174"
+                        height="174">
+                    <p class="collaborative-partner-member-content-name">陳殿禮 教授</p>
+                    <p class="collaborative-partner-member-content-department">單位：工業設計系</p>
                 </div>
-                <div class="collaborative-partner-member-content col-6 col-xl-3">
-                    <div class="d-flex flex-column align-items-center" data-aos="flip-left">
-                        <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/144835366.png" alt="成員照片"
-                            width="174" height="174">
-                        <p class="collaborative-partner-member-content-name">鍾盛賜 教師</p>
-                        <p class="collaborative-partner-member-content-department">單位：台中市立東勢高工家具設計科</p>
-                    </div>
+            </div>
+            <div class="collaborative-partner-member-content col-md-6 col-xl-3">
+                <div class="d-flex flex-column align-items-center" data-aos="flip-left">
+                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/144835366.png" alt="成員照片" width="174"
+                        height="174">
+                    <p class="collaborative-partner-member-content-name">鍾盛賜 教師</p>
+                    <p class="collaborative-partner-member-content-department">單位：台中市立東勢高工家具設計科</p>
                 </div>
             </div>
         </div>
     </div>
-</section>
+</div>
 
 <style>
     .collaborative-partner-member-container {
@@ -70,7 +68,13 @@
     }
 
     .collaborative-partner-member-content-container {
-        padding: 0 250px 92px;
+        padding: 0 50px 92px;
+    }
+
+    @media (min-width: 1366px) {
+        .collaborative-partner-member-content-container {
+            padding: 0 250px 92px;
+        }
     }
 
     .collaborative-partner-member-content {
