--- a/Desktop/合作團隊/木創文化攪動深根計畫/心得回饋.html
+++ b/Desktop/合作團隊/木創文化攪動深根計畫/心得回饋.html
@@ -1,44 +1,49 @@
-<section class="d-none d-lg-block">
-    <div class="collaborative-partner-feedbacks-container d-flex flex-column align-items-center">
-        <h1 class="collaborative-partner-feedbacks-title w-100 text-center">心 得 回 饋</h1>
+<div class="collaborative-partner-feedbacks-container d-flex flex-column align-items-center">
+    <h1 class="collaborative-partner-feedbacks-title w-100 text-center">心 得 回 饋</h1>
 
-        <div class="collaborative-partner-feedback-container row" data-aos="fade-right" data-aos-offset="300"
-            data-aos-easing="ease-in-sine">
-            <span class="col-2">
-                <div class="d-flex flex-column align-items-center">
-                    <img alt="心得作者照片" height="174"
-                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/675109942.png" width="174" />
-                    <span class="collaborative-partner-feedback-author">孫同學</span>
-                </div>
-            </span>
-            <div class="collaborative-partner-feedback col-8">
-                <div class="left-triangle"></div>
-                <p class="collaborative-partner-feedback-content">
-                    在參與解決地方痛點的過程中，從一開始的茫茫然，到經過老師們的一翻指導，已開始上手知道要去哪找問題與找資源，而在這尋找的過程中也漸漸的學到蠻多的東西，如：地方魚塭的經營模式、地方人對當地溼地建設的看法等，且透過口湖地方場域的深耕經營，也了解了地方很多的過往與特色。
-                </p>
+    <div class="collaborative-partner-feedback-container row" data-aos="fade-right" data-aos-offset="300"
+        data-aos-easing="ease-in-sine">
+        <span class="col-12 col-xl-2">
+            <div class="d-flex flex-column align-items-center">
+                <img alt="心得作者照片" height="174" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/675109942.png"
+                    width="174" />
+                <span class="collaborative-partner-feedback-author">孫同學</span>
             </div>
-            <div class="col-2"></div>
+        </span>
+        <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0">
+            <div class="left-triangle"></div>
+            <p class="collaborative-partner-feedback-content">
+                在參與解決地方痛點的過程中，從一開始的茫茫然，到經過老師們的一翻指導，已開始上手知道要去哪找問題與找資源，而在這尋找的過程中也漸漸的學到蠻多的東西，如：地方魚塭的經營模式、地方人對當地溼地建設的看法等，且透過口湖地方場域的深耕經營，也了解了地方很多的過往與特色。
+            </p>
         </div>
-
-        <div class="collaborative-partner-feedback-container row" data-aos="fade-left" data-aos-offset="300"
-            data-aos-easing="ease-in-sine">
-            <div class="col-2"></div>
-            <div class="collaborative-partner-feedback col-8">
-                <div class="right-triangle"></div>
-                <p class="collaborative-partner-feedback-content">
-                    在參與解決地方痛點的過程中，從一開始的茫茫然，到經過老師們的一翻指導，已開始上手知道要去哪找問題與找資源，而在這尋找的過程中也漸漸的學到蠻多的東西，如：地方魚塭的經營模式、地方人對當地溼地建設的看法等，且透過口湖地方場域的深耕經營，也了解了地方很多的過往與特色。
-                </p>
-            </div>
-            <span class="col-2">
-                <div class="d-flex flex-column align-items-center">
-                    <img alt="心得作者照片" height="174"
-                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/411645215.png" width="174" />
-                    <span class="collaborative-partner-feedback-author">游同學</span>
-                </div>
-            </span>
-        </div>
+        <div class="col-xl-2 d-none d-xl-block"></div>
     </div>
-</section>
+
+    <div class="collaborative-partner-feedback-container row" data-aos="fade-left" data-aos-offset="300"
+        data-aos-easing="ease-in-sine">
+        <div class="col-xl-2 d-none d-xl-block"></div>
+        <span class="col-12 col-xl-2 d-block d-xl-none">
+            <div class="d-flex flex-column align-items-center">
+                <img alt="心得作者照片" height="174" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/411645215.png"
+                    width="174" />
+                <span class="collaborative-partner-feedback-author">游同學</span>
+            </div>
+        </span>
+        <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0">
+            <div class="right-triangle"></div>
+            <p class="collaborative-partner-feedback-content">
+                在參與解決地方痛點的過程中，從一開始的茫茫然，到經過老師們的一翻指導，已開始上手知道要去哪找問題與找資源，而在這尋找的過程中也漸漸的學到蠻多的東西，如：地方魚塭的經營模式、地方人對當地溼地建設的看法等，且透過口湖地方場域的深耕經營，也了解了地方很多的過往與特色。
+            </p>
+        </div>
+        <span class="col-12 col-xl-2 d-none d-xl-block">
+            <div class="d-flex flex-column align-items-center">
+                <img alt="心得作者照片" height="174" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/411645215.png"
+                    width="174" />
+                <span class="collaborative-partner-feedback-author">游同學</span>
+            </div>
+        </span>
+    </div>
+</div>
 
 <style>
     .collaborative-partner-feedbacks-container {
